--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -27,7 +27,7 @@
             <div class="workout-stats"></div>
             <div class="buttons">
               <a id="continue-btn" href="/public/exercise.html?" class="huge ui blue button">Continue Workout</a>
-              <a href="/public/exercise.html" class="huge positive ui button">New Workout</a>
+              <a href="/exercise.html" class="huge positive ui button">New Workout</a>
             </div>
           </div>
         </div>
@@ -41,9 +41,9 @@
   <div id="toast">
     Workout Added Successfully!
   </div>
-  <script src="/public/api.js"></script>
-  <script src="/public/workout.js"></script>
-  <script src="/public/index.js"></script>
+  <script src="/api.js"></script>
+  <script src="/workout.js"></script>
+  <script src="/index.js"></script>
 </body>
 
 </html>
