--- a/Develop/public/exercise.html
+++ b/Develop/public/exercise.html
@@ -82,8 +82,8 @@
   <div id="toast">
     Workout Added Successfully!
   </div>
-  <script src="/api.js"></script>
-  <script src="/exercise.js"></script>
+  <script src="/Develop/public/api.js"></script>
+  <script src="/Develop/public/exercise.js"></script>
 </body>
 
 </html>
